Funções básicas + Arrow function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span>CABEÇALHO</span>
     </header>
 
-    <div class="conteiner">
+    <div class="container">
         <aside class="l-e">
             <span>B-E</span>
         </aside>
@@ -29,7 +29,8 @@
 
     <footer class="rodape">
         <span>RODAPÉ</span>
+        <button value="10" onclick="console.log(`Resultado : ${soma(this.value,10,5)}`)">CLICK</button>
     </footer>
-    
+
 </body>
 </html>
