exercícios de setTimeout + input e label

--- a/index.html
+++ b/index.html
@@ -19,12 +19,37 @@
         </aside>
 
         <section class="central">
-            <span>CONTEÚDO</span>
+            <div>
+                <img src="./img/pic_bulboff.gif" alt="Lampada">
+            </div>
+
+            <button>LIGAR</button>
         </section>
 
         <aside class="l-d">
             <span>B-D</span>
         </aside>
+    </div>
+
+    <div class="info">
+        <form action="index.hmtl" method="get" onsubmit="return false">
+            <fieldset>
+                <legend>LOGIN</legend>
+                <div>
+                    <label for="idUser">Usuário</label>
+                    <input type="text" name="nmUser" id="idUser" placeholder="Usuário">
+                </div>
+
+                <div>
+                    <label for="idPass">Senha</label>
+                    <input type="password" name="txtPass" id="idPass" placeholder="Senha">
+                </div>
+
+                <div>
+                    <button type="button">LOGIN</button>
+                </div>
+            </fieldset>
+        </form>
     </div>
 
     <footer class="rodape">
