--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
             <fieldset>
                 <legend>LOGIN</legend>
                 <div>
-                    <label for="idUser">Usuário</label>
-                    <input type="text" name="nmUser" id="idUser" placeholder="Usuário">
+                    <label for="idUser">remove</label>
+                    <input type="text" name="txtRM" id="idRM" placeholder="RM">
                 </div>
 
                 <div>
