--- a/sucesso.html
+++ b/sucesso.html
@@ -11,6 +11,21 @@
     <!-- Recupere o localstorage e imprima o nome de usuário que fez o login! -->
     <h1>BEM-VINDO <span id="userWelcome"><strong></strong></span></h1>
 
+    <!-- Crie uma estrutura semântica que receba os dados do nosso querido usuário. Apresente todos os dados referentes a ele.
+        Ex:
+    nomeCompleto:
+    nomeUsuario:
+    avatarUsuario.
+    Crie uma espécie de card.
+    lembre utilize elementos HTML semânticos.
+    -->
+
+    <div>
+        <figure>
+            <img id="img-avatar" src="" alt="" width="30%">
+        </figure>
+    </div>
+
     <div>
         <button id="btnLogout">LOGOUT</button>
     </div>
